# The-Forge_AndrodiStudio

./: buildAll.sh  settings.gradle  testAll.sh
UTs/01_Transformations/: CMakeLists.txt  build.gradle
UTs/01_Transformations/src/main/: AndroidManifest.xml
UTs/01_Transformations/src/main/res/values/: strings.xml
UTs/02_Compute/: CMakeLists.txt  build.gradle
UTs/02_Compute/src/main/: AndroidManifest.xml
UTs/02_Compute/src/main/res/values/: strings.xml
UTs/03_MultiThread/: CMakeLists.txt  build.gradle
UTs/03_MultiThread/src/main/: AndroidManifest.xml
UTs/04_ExecuteIndirect/: CMakeLists.txt  build.gradle
UTs/04_ExecuteIndirect/src/main/: AndroidManifest.xml
UTs/04_ExecuteIndirect/src/main/res/values/: strings.xml
UTs/05_FontRendering/: CMakeLists.txt  build.gradle
UTs/05_FontRendering/src/main/: AndroidManifest.xml
UTs/05_FontRendering/src/main/res/values/: strings.xml
UTs/06_MaterialPlayground/: CMakeLists.txt  build.gradle
UTs/06_MaterialPlayground/src/main/: AndroidManifest.xml
UTs/06_MaterialPlayground/src/main/res/values/: strings.xml
UTs/07_Tessellation/: CMakeLists.txt  build.gradle
UTs/07_Tessellation/src/main/: AndroidManifest.xml
UTs/08_GltfViewer/: CMakeLists.txt  build.gradle
UTs/08_GltfViewer/src/main/: AndroidManifest.xml
UTs/08_GltfViewer/src/main/res/values/: strings.xml
UTs/09_LightShadowPlayground/: CMakeLists.txt  build.gradle
UTs/09_LightShadowPlayground/src/main/: AndroidManifest.xml
UTs/09_LightShadowPlayground/src/main/res/values/: strings.xml
UTs/10_PixelProjectedReflections/: CMakeLists.txt  build.gradle
UTs/10_PixelProjectedReflections/src/main/: AndroidManifest.xml
UTs/10_PixelProjectedReflections/src/main/res/values/: strings.xml
UTs/12_ZipFileSystem/: CMakeLists.txt  build.gradle
UTs/12_ZipFileSystem/src/main/: AndroidManifest.xml
UTs/12_ZipFileSystem/src/main/res/values/: strings.xml
UTs/13_UserInterface/: CMakeLists.txt  build.gradle
UTs/13_UserInterface/src/main/: AndroidManifest.xml
UTs/14_WaveIntrinsics/: CMakeLists.txt  build.gradle
UTs/14_WaveIntrinsics/src/main/: AndroidManifest.xml
UTs/14_WaveIntrinsics/src/main/res/values/: strings.xml
UTs/15_Transparency/: CMakeLists.txt  build.gradle
UTs/15_Transparency/src/main/: AndroidManifest.xml
UTs/15_Transparency/src/main/res/values/: strings.xml
UTs/16a_SphereTracing/: CMakeLists.txt  build.gradle
UTs/16a_SphereTracing/src/main/: AndroidManifest.xml
UTs/16a_SphereTracing/src/main/res/values/: strings.xml
UTs/TheForgeBase/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
